--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -146,21 +146,32 @@ I hope that the text is now perfectly clear and concise.
 
 \textit{The authors need to better articulate the specific contribution of their work. The paper appears to be an updated application of previous studies, particularly those by Bolch et al. (2022). However, the novelty of the current study is not sufficiently clear. For example, while the authors highlight the imputation of national growth rates and the use of a poverty line aligned with SDG1, these aspects are not sufficiently emphasized or contextualized within the broader literature. How does this paper advance the field beyond being an update? Does it offer new insights into the policy implications of SDG1? Are the results of the scenarios robust to different assumptions about economic growth or redistribution? These points should be explicitly addressed to establish the paper's unique contribution. }~\\
 
-response TODO
+To highlight the paper's contributions, I added two paragraphs in the introduction. 
 
-end of section ``Data''
-This assumption allows separating the effects of growth alone from those of a change in the income distribution. 
+The first one is right before the \textit{Literature} paragraph and reads: ``\textit{To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}'' This last insight conveys a policy implication for SDG1.
 
-end of first paragraph of Section ``The effect of balanced growth''
-In Supplementary Material, I show that the assumption of balanced growth has little effect on the poverty estimates compared to an alternative assumption where national inequality evolves just as in the recent past. This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.
+The second newly added paragraph concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
+
+Furthermore, I added a new analysis on the effects of \textit{unbalanced} growth, on top of the paper's main assumption of balanced growth. At the end of Section ``Data'', I now justify the main assumption of balanced growth: ``\textit{This assumption allows separating the effects of growth alone from those of a change in the income distribution.}'' Besides, at the end of the first paragraph of Section ``The effect of balanced growth'', I added: 
+``\textit{In Supplementary Material, I show that the assumption of balanced growth has little effect on the poverty estimates compared to an alternative assumption where national inequality evolves just as in the recent past. This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.}'' In Table 1 of the main text and in a new Supplementary Material, one can observe that the assumption of balanced growth is innocuous. Indeed, extending recent trends in inequality has very little effect on estimates of poverty or capacity for domestic poverty eradication. 
+
+Finally, the numerous balanced growth and redistribution scenarios tested in the Supplementary Material show that the main conclusion --- that SDG1 is unachievable without global solidarity --- is robust, as is now explained in the Introduction.
 
 ~\\ ~\\
 
 \textit{The literature review needs significant improvement. In the last paragraph of the introduction, the authors briefly mention that their work is related to studies on global income distribution but fail to explain how and why. In addition, I wonder how do the scenarios modeled in this paper compare with similar exercises in the literature? Are there methodological or theoretical advancements introduced here? Strengthening the link to prior research will help readers understand the relevance and placement of the study within the broader academic debate. }~\\
 
-response
+I now explain how this work is related to studies on global income distribution by expanding the last paragraph as follows: 
 \textit{I follow Lakner \& Milanovic (2016) by merging income and consumption data without adjustment in the main specification. 
-Anand \& Segal (2015) discuss common issues regarding the global income distribution and introduce a method to handle discrepancies between data sources. I follow a similar method as a robustness check, as explained in Section \ref{subsec:data}. }
+Anand \& Segal (2015) discuss common issues regarding the global income distribution and introduce a method to handle discrepancies between data sources. I follow a similar method as a robustness check, as explained in Section 2.} 
+
+To clarify the relation of the concept I study to the extant literature, I added the words in bold at the beginning of the ``Literature'' paragraph: ``\textit{\textbf{The idea to measure the domestic capacity to eradicate poverty with an antipoverty cap originates in Medeiros (2006) (who calls it the ``affluence line'').} In turn, the idea to measure it with an antipoverty tax dates back to Ravallion (2010) and Ceriani \& Verme (2014) \textbf{(the latter paper dubs it ``income lever'')}.}''
+
+I now also explain at the end of the introduction that ``\textit{I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution}'', and I acknowledge in Section 3.5 that the tax schedule used to measure the income floor that can be funded \textit{is conservatively inspired by \cite{ravallion_poorer_2010}, who uses a rate of 10\% but a higher threshold (corresponding to \$18/day) to assess whether a country has a high or low capacity to eradicate poverty.}
+
+While I compared my results to those of Bolch et al. (2022) only in Section 3.3, I have now added a summary of the comparison in the ``Literature'' paragraph. 
+Compared to the literature, the main advancement is to introduce growth scenarios. I now highlight this contribution better in by comparing the results to those of Bolch et al. (2022): 
+\textit{In contrast to BCL} [who find 62 such countries]\textit{, I find that 34 countries lack sufficient resources eradicate severe poverty in 2030 in a scenario with 3\% growth. Compared to BCL, this less pessimistic finding is largely due to growth up to 2030; though the revision of inequality data also plays a role (see Section 3.3). }
 ~\\ ~\\
 
 \textit{While the three scenarios provide a useful framework, they are not adequately justified. Why were these specific scenarios chosen? Are they exhaustive or representative of potential pathways to achieving SDG1? }~\\
@@ -169,7 +180,7 @@ I assume that by scenario, you are referring to (i) the effect of balanced growt
 
 The thought experiments are not meant to be exhaustive nor representative pathways to achieve SDG1. They are presented to showcase how relying solely on conventional solutions (namely, growth and domestic policies) would fall short of SDG1. In contrast, global solidarity has the potential to dramatically accelerate the eradication of poverty.
 
-To justify the paper's structure, I added the following paragraph in the Introduction: \textit{In this paper, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}
+To justify the paper's structure, I added the following paragraph in the Introduction: \textit{In this paper, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}
 ~\\ ~\\
 
 \textit{For the growth-only scenario, is the assumption of uniform distribution of economic growth realistic? What do historical trends or projected economic conditions say? Assuming that these trends prevail in the upcoming years, how could they affect the results? }~\\
@@ -217,13 +228,13 @@ Compared to BCL, the present paper offers several improvements: (i) it uses more
 
 While I recognize that my paper presents little methodological novelty compared to BCL (in the same way that BCL did not offer much methodological novelty compared to Ravallion, 2010), I believe that it offers a timely contribution to the assessment of the first SDG. Indeed, BCL cannot be used to assess the prospects for achieving the first SDG; the paper's improvements are necessary to do so. 
 
-To highlight the paper's contributions, I added the following paragraph at the end of the Introduction: \textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}
+To highlight the paper's contributions, I added the following paragraph at the end of the Introduction: \textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}
 ~\\ ~\\
 
 \textit{2.	Absence of a theoretical framework}
 \textit{This paper employs a methodology like Bolch et al. (2022) to assess which countries have sufficient domestic resources to achieve the first SDG. It is important to briefly discuss this framework in the paper in a separate methodology section as I had to go back to Bolch et al. (2022) to refresh my knowledge about this methodology. }~\\
 
-response TODO
+response TODO add income floor
 ~\\ ~\\
 
 \textit{3.	Narrow scope of the methodology}
@@ -240,9 +251,9 @@ To emphasize that no causal inference can be drawn from the paper, I added the f
 \textit{4.	The structure of the paper}
 \textit{This paper currently reads more like a book chapter. It would be necessary to restructure it to be accepted in a journal. For instance, a summary of the key results must be included in the introduction. The key contributions of the paper can be discussed in light of the literature in the introduction.}~\\
 
-I added two paragraphs in the introduction to address this concern. The first one is right before the \textit{Literature} paragraph and reads: ``\textit{To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}''
+I added two paragraphs in the introduction to address this concern. The first one is right before the \textit{Literature} paragraph and reads: ``\textit{To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.}''
 
-The second one concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
+The second one concludes the Introduction and reads: ``\textit{The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.}''
 ~\\ ~\\
 
 \textit{5. In the conclusion, the author mentions the case of China's profound government commitment. It is important that the author highlights how feasible such interventions in other developing countries, whether there could be any institutional barriers. Finally, as the author alludes to transfer based on international solidarity as a panacea to eradicate extreme poverty, it would be nice to discuss some policy directives on this matter. How feasible are these interventions based on the transfer of global income to eradicate poverty? This question remains largely unanswered in this paper.}~\\
