--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -706,6 +706,21 @@
   url = {https://doi.org/10.1093/oxrep/grz015}
 }
 
+@article{medeiros_rich_2006,
+  title = {The {{Rich}} and the {{Poor}}: {{The Construction}} of an {{Affluence Line}} from the {{Poverty Line}}},
+  shorttitle = {The {{Rich}} and the {{Poor}}},
+  author = {Medeiros, Marcelo},
+  year = {2006},
+  month = aug,
+  journal = {Social Indicators Research},
+  volume = {78},
+  number = {1},
+  pages = {1--18},
+  issn = {1573-0921},
+  doi = {10.1007/s11205-005-7156-1},
+  url = {https://doi.org/10.1007/s11205-005-7156-1}
+}
+
 @article{milanovic_three_2024,
   title = {The Three Eras of Global Inequality, 1820--2020 with the Focus on the Past Thirty Years},
   author = {Milanovic, Branko},
