--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -246,13 +246,13 @@ reads: ``By 2030, eradicate extreme poverty for all people everywhere, currently
 In this paper, I assess whether growth and domestic redistribution are sufficient to eradicate extreme poverty by 2030. I first study the extent of poverty in different growth scenarios. Then, I calculate the magnitude of domestic redistribution required in each country to eradicate poverty in 2030. I mobilize different indicators. For two idealized tax policies, I estimate the parameter that would raise enough revenue to eradicate poverty. In the ``antipoverty cap'', I fix the tax rate at its maximum value of 100\% so that the tax effectively becomes a cap on top incomes, and I find the required cap (or taxation threshold). All income above the cap is assumed to be redistributed to the lowest incomes in order to eradicate poverty. In the ``antipoverty tax'', I fix the taxation threshold and find the tax rate needed to raise the revenue required to eradicate poverty. As a last indicator, I fix both the taxation threshold and the tax rate, and I compute the income floor that the tax could finance (by redistributing tax revenue to the lowest incomes). In the lowest income countries, extreme poverty is estimated to persist even after strong growth and radical redistribution. % add idealized domestic policies to redistribute income. 
 This has implications for the international community, as international solidarity appears necessary to achieve the first SDG. I complete the analysis by exemplifying international transfers that would eradicate poverty by 2030.
 
-To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.
+To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. This impossibility result is robust to a wide range of growth and redistribution scenarios, including extremely optimistic ones. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.
 
 \paragraph{Literature} 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
 
-The idea to measure the domestic capacity to eradicate poverty with an antipoverty tax dates back to \cite{ravallion_poorer_2010} and \cite{ceriani_income_2014}. \cite{ravallion_poorer_2010} found that even with a 100\% tax above the U.S. poverty line, 29 countries could not eradicate extreme poverty, and 37 countries could not eradicate ``severe poverty'' defined with a higher poverty line (which corresponds to \$3.65/day in 2017 PPP \$). %Using this higher poverty line, 
+The idea to measure the domestic capacity to eradicate poverty with an antipoverty cap originates in \cite{medeiros_rich_2006} (who calls it the ``affluence line''). In turn, the idea to measure it with an antipoverty tax dates back to \cite{ravallion_poorer_2010} and \cite{ceriani_income_2014} (the latter paper dubs it ``income lever''). \cite{ravallion_poorer_2010} found that even with a 100\% tax above the U.S. poverty line, 29 countries could not eradicate extreme poverty, and 37 countries could not eradicate ``severe poverty'' defined with a higher poverty line (which corresponds to \$3.65/day in 2017 PPP \$). %Using this higher poverty line, 
 \cite{bolch_arithmetics_2022} --- hereafter ``BCL'' --- update the computations with more recent data and find that 62 countries do not have sufficient resources to eradicate severe poverty. % Why higher than Ravallion? 2 potential reasons: Ravallion survey 90 countries vs. 120 for BCL; poverty headcount has increased with the updated poverty line (Deaton, 2010) -- impossible to check as Ravallion doesn't specify the survey years of his data
 % BOF specify what we mean by addding "by taxing the non-(US-)poor"
 
@@ -262,6 +262,9 @@ First, the most recent data was not available to BCL (their most recent survey y
 Second, BCL study the data as it stands rather than adjusting it for growth and using it to infer the income distributions in 2030. Third, they focus on a poverty line higher than the one officially used in the first SDG.
 % Ravallion, Bolch. How I improve upon Bolch. 
 % # compare Bolch with the same survey years as them: not replicated because the data has been revised. They use old data (2014) and old survey years (2009). Using most recent PIP data is surely preferable.
+
+% BCL found that 27 could not eradicate severe poverty even with extreme redistribution, as their average per capita consumption is below the severe poverty threshold of \$$_\text{2005}$2/day. 
+In contrast to BCL, I find that 34 countries lack sufficient resources eradicate severe poverty in 2030 in a scenario with 3\% growth. Compared to BCL, this less pessimistic finding is largely due to growth up to 2030; though the revision of inequality data also plays a role (see Section \ref{subsec:cap}). 
 
 Consistently with \cite{ravallion_poorer_2010}, \cite{hoy_gasoline_2016} find that 52\% of global extreme poverty can be eliminated with a 50\% antipoverty tax above \$$_\text{2011}$10/day (in 2011 PPP). They also consider the reallocation of public spending and show that this antipoverty tax together with the reallocation of fossil-fuel subsidies and military spending could eliminate 77\% of global extreme poverty. Finally, they show that countries with GDP per capita below \$$_\text{2011}$2,000 per year do not have the domestic capacity to eradicate extreme poverty (measured as an antipoverty tax below 50\%).
 % They find that with growth alone, and if each country's growth persists at the same level, extreme poverty will only end in 2224. %This is likely to be an underestimate as it is only based on countries where there was positive growth in survey means over the last ten years. 
@@ -291,7 +294,7 @@ per year. With the current trend, the SDGs will not be achieved and only limited
 % Lit on costing of extreme poverty eradication: UNCTAD (21, p. 15: growth needed), Vorisek & Yu (20, lite review), SDSN (19, excellent: talk about ODA, wealth & carbon taxes, estimate domestic resources, e.g. Table 4), Moyer & Hedden (20), Manuel et al. (18) (cost to end extreme poverty: 2.5 T$, incl. 150 G$ in countries lacking resources - vs. 200 G$ in ODA)
 % karver_mdgs_2012 chandy_final_2013 bicaba_can_2017 lakner_how_2022 lakner_global_2016 lakner_global_2013 lahoti_global_2016 gradin_trends_2021 anand_chapter_2015 pinkovskiy_parametric_2009 jorda_global_2019 unctad_estimating_2021 vorisek_understanding_2020 sdsn_sdg_2019 moyer_are_2020 manuel_financing_2018
 
-The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.
+The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also introduce the notion of \textit{income floor} as a measure of credible potential for redistribution. Finally, I improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.
 
 \section{Data}\label{subsec:data}
 % Important: data source, HFCE, balanced growth
@@ -299,13 +302,13 @@ The main contribution of this paper is to provide an explicit assessment of the 
 % Not clear which is more accurate between survey and national accounts (Deaton 05), especially in low-income countries, as agricultural production is indirectly measured in national accounts. Also, in Africa, mean conso is similar between national accounts and surveys (Deaton 05). Also, WIID adjust to GDP PPP but I should adjust to national conso, not GDP. Martinez (22) shows that autocracies overestimate GDP growth by 35%. 
 % Prydz et al. (22) argue that NAS are more accurate but show that the discrepancy between survey mean consumption and NAS HFCE is not that large: 22%, and 13.7% for low-income countries. HFCE is broader (and encompasses spending of non-profit entities like NGOs). => Also, if one scales up the conso distribution, one should also scale up the poverty line (as it is based on conso surveys): if one does that, poverty rates are on average the same, they change due to variation in survey/NAS discrepancies. 
 % I can adjust to HFCE as robustness check https://data.worldbank.org/indicator/NE.CON.PRVT.PP.KD with the assumption that the extra money is held by the rich (>13$/day), 
-The percentiles of each country's post-tax income (or consumption) are estimated by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet). PIP aggregates the most recent household surveys (60\% of countries were surveyed between 2018 and 2021). This data is based on purchasing power parity (PPP) and given in constant 2017 \$. % TODO! condense in one sentence this paragraph and the following sentence; put Data/ to appendix
+The percentiles of each country's post-tax income (or consumption) are estimated by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet). PIP aggregates the most recent household surveys (59\% of the 167 countries were surveyed between 2018 and 2021). This data is based on purchasing power parity (PPP) and given in constant 2017 \$. % TODO! condense in one sentence this paragraph and the following sentence; put Data/ to appendix
 
 In low-income countries (those of greatest interest to us), PIP provides data on per capita \textit{consumption} (rather than income). Thereby, the data does not capture services procured by the government. % TODO healthcare, etc.
 Another potential concern with household surveys is that the aggregate (national) consumption they imply is generally lower than the one estimated in national accounts \citep{deaton_measuring_2005,prydz_disparities_2022,hlasny_impact_2022}. This discrepancy comes from measurement errors on both sides: on the one hand, household surveys suffer from underreporting of top incomes and large expenditures; on the other hand, national accounts do not properly account for informal work %and auto-consumption, % TODO? cite? Deaton (2001) argues that in India approximately half of the gap between national accounts consumption and household surveys is due to imputed rents
 and tend to inflate agricultural output \citep{angrist_why_2021}. 
 Furthermore, authoritarian countries have been shown to produce inflated GDP statistics, except for countries below the GDP threshold of eligibility for preferential loans by the World Bank \citep{martinez_how_2022}. % international development association
-While Household Final Consumption Expenditures (HFCE) from national accounts is 44\% greater than the aggregate consumption from household surveys, the ``discrepancy ratio'' is largest for middle-income countries and is only 12\% for low-income countries. 
+While Household Final Consumption Expenditures (HFCE) from national accounts is 42\% greater than the aggregate consumption from household surveys, the ``discrepancy ratio'' is largest for middle-income countries and is only 12\% for low-income countries. 
 Because household surveys are best suited to estimate consumption by the poorest, I use unadjusted PIP data as a baseline. 
 
 As a robustness check, I also re-derive the main results after adjusting aggregate consumption by the discrepancy ratio (computed using World Bank data). In line with \cite{lakner_global_2013} and \cite{anand_chapter_2015}, I impute the extra consumption to the top percentile. I do not perform the rescaling on the 15\% of countries (like Burundi or the D.R.C.) with HFCE lower than its aggregate consumption from PIP, and I assume a discrepancy ratio of +12\% for the 20\% of countries lacking data on HFCE. 
@@ -318,7 +321,7 @@ by assuming a constant growth of 7\% starting in 2015. In Supplementary Material
 \section{Results}
 \subsection{The effect of balanced growth}
 
-To estimate global poverty rates, the World Bank scales up the percentiles measured in household surveys by the country's GDP growth between the survey year and the year of interest.\footnote{The World Bank also adjusts growth rates when data captures consumption rather than income, cf. \href{https://datanalytics.worldbank.org/PIP-Methodology/lineupestimates.html\#extrapolations}{datanalytics.worldbank.org/PIP-Methodology/lineupestimates.html}.} I project global poverty rates and poverty gaps in 2030 using the same assumption of balanced growth (i.e., constant inequality), for a range of growth scenarios (Table \ref{tab:poverty}). I also show that the balanced growth assumption has little effect on poverty estimates compared to an alternative assumption in which national inequality evolves as in the recent past. This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.
+To estimate global poverty rates, the World Bank scales up the percentiles measured in household surveys by the country's GDP growth between the survey year and the year of interest.\footnote{The World Bank also adjusts growth rates when data captures consumption rather than income, cf. \href{https://datanalytics.worldbank.org/PIP-Methodology/lineupestimates.html\#extrapolations}{datanalytics.worldbank.org/PIP-Methodology/lineupestimates.html}.} I project global poverty rates and poverty gaps in 2030 using the same assumption of balanced growth (i.e., constant inequality), for a range of growth scenarios (Table \ref{tab:poverty}). I also show that the balanced growth assumption has little effect on poverty estimates compared to an alternative assumption of unbalanced growth in which national inequality evolves as in the recent past (see Supplementary Material for details). This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.
 
 \input{../tables/poverty.tex}
 
@@ -355,7 +358,7 @@ In low-income countries, we measure household consumption rather than income, me
 
 Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%. I choose this rate as a baseline as it is an upper bound of growth rates recently experienced in the lowest-income countries. Indeed, among the 8 countries with an average consumption below 3\$/day, growth was on average negative over 2014--2019 (or 2014--2022), and the highest growing country (Central African Republic) grew at a rate of 2.4\% per year. % shorten as it seems I specify everywhere
 
-\subsection{Antipoverty caps}
+\subsection{Antipoverty caps\label{subsec:cap}}
 
 \begin{figure}[!b]
   \caption[Anti-\textit{extreme-poverty} cap in 2030 after 3\% growth.]{Income cap eradicating extreme poverty (in \$/day). In this idealized policy, all income above the cap is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. %abstracting away from distorsions and implementation costs. Growth is 3\% over 2022--2030.
@@ -425,11 +428,11 @@ Therefore, India seems able to eliminate extreme poverty by 2030 with its domest
 % By default, 6\% (7?) growth starting in 2023 
 % - Tax rate to eradicate poverty: above 7, 18: Figure 2
 
-\subsection{The credible potential of domestic redistribution}
+\subsection{Income floor as a measure of credible potential for redistribution}
 
-A final way of approaching the issue is to set a tax schedule, compute how much revenues it would generate in each country, and estimate the income floor that these revenues could finance (by topping up the incomes of the poorest to the income floor). As I have already explored extreme redistributive policies, I analyse here a more reasonable tax schedule. Namely, I consider a 10\% marginal tax rate on income above \$6.85/day. Although the tax base may be too wide (affecting people on the verge of acute poverty) % taxation threshold may be too low 
+A final way of approaching the issue is to set a tax schedule, compute how much revenues it would generate in each country, and estimate the income floor that these revenues could finance (by topping up the incomes of the poorest to the income floor). As I have already explored extreme redistributive policies, I analyse here a more reasonable tax schedule. Namely, I consider a 10\% marginal tax rate on income above \$6.85/day. Although the tax base I choose may be too wide (affecting people on the verge of acute poverty) % taxation threshold may be too low 
 and the tax rate too low for top incomes, 
-this simple tax schedule seems to correctly reflect the fiscal capacity of governments. Note that the value of the income floor depends on the whole income distribution: the top of the distribution determines the revenues that can be generated; and the bottom dictates the cost of raising low incomes up to a given floor. 
+this simple tax schedule seems to correctly reflect the fiscal capacity of governments. Indeed, this tax schedule is conservatively inspired by \cite{ravallion_poorer_2010}, who uses a rate of 10\% but a higher threshold (corresponding to \$18/day) to assess whether a country has a high or low capacity to eradicate poverty. Note that the value of the income floor depends on the whole income distribution: the top of the distribution determines the revenues that can be generated; and the bottom dictates the cost of raising low incomes up to a given floor. 
 
 Figure \ref{fig:demogrant_7__10} presents the income floor that can funded in 2030 with our simple tax in a 3\% growth scenario. 23 countries are unable to eradicate extreme poverty through this tax. This figure is close to the count of low-income countries, at 27, but only 13 countries fall into both categories.
 %Although there are about as many countries that cannot close the extreme poverty gap with this tax (23) as there are low-income countries (27), only 13 countries fall into both of these groups. 
@@ -486,7 +489,7 @@ These rates are expressed on top of the current tax system and apply to post-tax
 % Although the idea of an internationally redistributive tax may seem far-fetched, 
 Although internationally redistributive taxes have yet to take off, the proposal of a global wealth tax is gaining momentum \citep{piketty_brief_2022}. A 2\% tax on individual net wealth above \$1 billion would raise \$214 billion a year, slightly more than the global extreme poverty gap \citep{alstadsaeter_global_2024}. Moreover, a global tax on the wealthiest 1\% can raise enough revenues to close the global acute poverty gap and lift everyone above \$6.85/day. For example, the \href{https://wid.world/world-wealth-tax-simulator}{WID wealth tax simulator} shows that a tax consisting of a 4\% marginal rate above \$1 million and 10\% above \$100 million would raise 4.4\% of the global GDP. More generally, a global tax on millionaires designed to be revenue-maximing in the long-run has the potential to finance the eradication of acute poverty. 
 
-While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. Indeed, \cite{fabre_international_2023} show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. Meanwhile, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries \citep{world_bank_state_2017,world_bank_benin_2020,world_bank_identification_2022}, with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification then makes it possible to offer numerous services. In particular, it could be used for cash transfers to the poorest households, a proven method to alleviate poverty \citep{haushofer_short-term_2016,egger_general_2022}. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits \citep{muralidharan_identity_2023}. In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic \citep{ipa_togos_2021}. Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas. While direct cash transfers are increasingly viewed as a promising way to eradicate poverty, conventional government programs may offer a more reliable path through the deployment public services, social protection, and deployment infrastructures. The latter would not even need to rely on future progress regarding identification and mobile networks.
+While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. Indeed, \cite{fabre_international_2023} show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. Meanwhile, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries \citep{world_bank_state_2017,world_bank_benin_2020,world_bank_identification_2022}, with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification then makes it possible to offer numerous services. In particular, it could be used for cash transfers to the poorest households, a promising method to alleviate poverty \citep{haushofer_short-term_2016,egger_general_2022}. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits \citep{muralidharan_identity_2023}. In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic \citep{ipa_togos_2021}. Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas. While direct cash transfers are increasingly viewed as a reliable way to eradicate poverty, conventional government programs may offer a more proven path through the deployment public services, social protection, and deployment infrastructures. The latter would not even need to rely on future progress regarding identification and mobile networks. % TODO
 
 In a nutshell, whereas poverty alleviation cannot be achieved rapidly without international solidarity, it can be financed by reasonable contributions from the global top 1\%.
 % - One example of global redistribution (incl. largest recipients/contributors)
