--- a/tables/floor_full.tex
+++ b/tables/floor_full.tex
@@ -1,9 +1,9 @@
 \begin{table}[b]
 
-\caption[Income floor (in \$/day) financed by a 10\% tax above \$10/day.]{\label{tab:tax}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
+\caption[Income floor (in \$/day) financed by a 10\% tax above \$10/day.]{\label{tab:floor}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
 \makebox[\textwidth][c]{
 \begin{tabular}[t]{lrrrrrrrr}
-\toprule Growth scenario over 2022--2030 & 3\% & \makecell{3\% + trend \\inequality} & 3\% & \multicolumn{2}{c}{Projection} & 7\% & 7\% & \makecell{7\% since \\2015} \\ 
+\toprule Growth scenario over 2022--2030 & 3\% & \makecell{3\%\\unbalanced} & 3\% & \multicolumn{2}{c}{Projection} & 7\% & 7\% & \makecell{7\% since \\2015} \\ 
 HFCE rescaling & & & \checkmark & & \checkmark & & \checkmark & \\ 
  \midrule
 World & 8.6 & 8.5 & 10.3 & 8.4 & 10.1 & 12.1 & 14.4 & 16.7\\
